# game

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  LICENSE-ASSETS  Phase 0.md  README.html  README.md  fetch_sdl2.sh  phase 1.md  phase 2.md  phase 3.md  phase 4.md  phase 5.md  phase 6.md  plan.md
assets/: materials.json
cmake/: switch.cmake  windows.cmake
docs/: DEPLOYMENT.md  steam_cloud.md
src/: CMakeLists.txt  main.cpp
src/audio/: audio.cpp  audio.h  audio_settings.h
src/core/: allocation_tracker.cpp  allocation_tracker.h  assert.h  frame_allocator.cpp  frame_allocator.h  imu_filter.h  log.cpp  log.h  math.h  profiler.h  types.h
src/engine/: asset_manifest.h  credits.h  engine.cpp  engine.h  engine_arena.cpp  engine_autoloot.cpp  engine_autoplay.cpp  engine_combat.cpp  engine_death.cpp  engine_hud.cpp  engine_init.cpp  engine_init_assets.cpp  engine_init_callbacks.cpp  engine_inventory.cpp  engine_launch.cpp  engine_menu.cpp  engine_net.cpp  engine_persist.cpp  engine_render.cpp  engine_render_character.cpp  engine_render_effects.cpp  engine_render_entities.cpp  engine_render_menus.cpp  engine_render_viewmodel.cpp  engine_render_world.cpp  engine_spawn.cpp  engine_startgame.cpp  engine_town.cpp  engine_update.cpp  engine_update_player.cpp  engine_update_skills.cpp  lag_comp_ring.cpp  lag_comp_ring.h  launch_options.cpp  launch_options.h  menu_osk.h
src/game/: arena.h  autoplay_brain.cpp  autoplay_brain.h  autoplay_combat.h  autoplay_control.h  autoplay_descent.cpp  autoplay_descent.h  autoplay_doctrine.h  autoplay_intent.h  autoplay_nav.h  boss_ai.cpp  boss_ai.h  boss_def.h  boss_loader.cpp  boss_loader.h  bot_input.h  build_score.h  champion.cpp  champion.h  class_defs.cpp  combat.cpp  combat.h  crowd_control.h  enemy_ai.cpp  enemy_ai.h  enemy_ai_boss.cpp  enemy_ai_friendly.cpp  enemy_ai_internal.h  enemy_ai_roles.cpp  enemy_ai_states.cpp  enemy_def.h  enemy_loader.cpp  enemy_loader.h  entity.cpp  entity.h  floor_event.cpp  floor_event.h  floor_event_loader.cpp  floor_event_loader.h  free_play.h  (+42 more)
src/net/: client.cpp  client.h  client_time.cpp  clock_sync.cpp  clock_sync.h  input_wire.cpp  interp_delay.h  lag_comp.h  lobby_code.h  net.cpp  net.h  net_metrics.h  net_player.h  packet.h  pending_damage_ring.cpp  pending_damage_ring.h  pending_hit_ring.cpp  pending_hit_ring.h  pending_pickup_ring.cpp  pending_pickup_ring.h  pending_skill_ring.cpp  pending_skill_ring.h  prediction_ring.cpp  prediction_ring.h  render_offset.cpp  render_offset.h  server.cpp  server.h  snapshot.cpp  snapshot.h  snapshot_baseline.cpp  snapshot_baseline.h  upnp.cpp  upnp.h
src/platform/: clock.cpp  clock.h  input.cpp  input.h  input_focus.h  platform.h  steam.cpp  steam.h  user_paths.cpp  user_paths.h  window.cpp  window.h
src/renderer/: camera.cpp  camera.h  debug_draw.cpp  debug_draw.h  font.cpp  font.h  frustum.h  gl_context.cpp  gl_context.h  hud.cpp  hud.h  hud_cooldown_util.h  hud_input_glyphs.cpp  hud_internal.h  hud_inventory.cpp  hud_portraits.cpp  hud_skill_bar.cpp  hud_status.cpp  item_icons.cpp  item_icons.h  item_icons_gen.h  material.cpp  material.h  mesh.cpp  mesh.h  minimap.cpp  minimap.h  obj_loader.cpp  obj_loader.h  particles.cpp  particles.h  projectile_renderer.cpp  projectile_renderer.h  renderer.cpp  renderer.h  screenshot.cpp  screenshot.h  shader.cpp  shader.h  skill_icons_data.h  (+3 more)
src/tools/: CMakeLists.txt  model_gen.cpp  model_gen.h  weapon_gen_main.cpp
src/world/: collision.cpp  collision.h  combat_query.cpp  combat_query.h  level_gen.cpp  level_gen.h  level_grid.cpp  level_grid.h  level_loader.cpp  level_loader.h  level_mesh.cpp  level_mesh.h  pathfinder.cpp  pathfinder.h  raycast.cpp  raycast.h  spatial_grid.h  story_nav.h  tile_noise.h
tests/: CMakeLists.txt  sanity_test.cpp  stubs_material.cpp  test_main.cpp
tests/balance/: balance_lab.cpp  balance_lab.h  test_balance_lab.cpp
tests/engine/: test_asset_manifest.cpp  test_lag_comp_ring.cpp
tests/game/: test_ai_preference.cpp  test_arena.cpp  test_armor_mitigation.cpp  test_armor_tier.cpp  test_audio_settings.cpp  test_autoplay_brain.cpp  test_autoplay_combat.cpp  test_autoplay_control.cpp  test_autoplay_descent.cpp  test_autoplay_doctrine.cpp  test_block_outcome.cpp  test_bot_input.cpp  test_build_score.cpp  test_champion.cpp  test_chest.cpp  test_cooldown_gate.cpp  test_crowd_control.cpp  test_difficulty_scaling.cpp  test_dormant_watch.cpp  test_engine_shield.cpp  test_floor_event.cpp  test_free_play.cpp  test_interact.cpp  test_jump.cpp  test_lead_assist.cpp  test_legendary_pool.cpp  test_max_health.cpp  test_opening_strike.cpp  test_pet_item.cpp  test_projectile_parry.cpp  test_quickbar.cpp  test_resurrect_cap.cpp  test_shared_loot.cpp  test_shrine_buff.cpp  test_skill_bar_hit.cpp  test_source_shard.cpp  test_stash.cpp  test_static_charge.cpp  test_teleport_dest.cpp  test_weapon_dps.cpp
tests/net/: test_clock_sync.cpp  test_input_drain.cpp  test_input_wire.cpp  test_interp_delay.cpp  test_lag_comp.cpp  test_lobby_code.cpp  test_net_metrics.cpp  test_pending_damage_ring.cpp  test_pending_hit_ring.cpp  test_pending_pickup_ring.cpp  test_pending_skill_ring.cpp  test_prediction_ring.cpp  test_render_offset.cpp  test_snapshot_baseline.cpp  test_snapshot_delta.cpp  test_snapshot_entity.cpp  test_snapshot_header.cpp  test_snapshot_world_item.cpp
tests/platform/: test_input_focus.cpp
tests/renderer/: test_hud_cooldown.cpp
tests/world/: test_autoplay_nav.cpp  test_collision_push.cpp  test_four_story.cpp  test_lava.cpp  test_level_gen.cpp  test_mesh_scratch.cpp  test_multislab.cpp  test_pathfinder.cpp  test_platform.cpp  test_ray_targeting.cpp  test_raycast.cpp  test_story_nav.cpp  test_tile_noise.cpp  test_vertical_hall.cpp
tools/: balance_chart.py  build_assets.py  build_deploy_switch_lan.sh  deploy_switch.sh  fetch_audio.py  gen_achievement_icons.py  gen_audio.py  gen_item_icons.py  gen_logo.py  gen_logo_walk.py  gen_manual.py  gen_mesh.py  gen_skill_icons.py  gen_skin.py  gen_status_icons.py  gen_steam_capsules.py  gen_steam_icon.py  gen_steam_library.py  (+9 more)
(+125 files in other folders)
